--- a/Jannine.Forms/Jannine.Forms.csproj
+++ b/Jannine.Forms/Jannine.Forms.csproj
@@ -47,6 +47,13 @@
     <Compile Include="Views\SoundcloudPage.cs" />
     <Compile Include="Controls\JannineNavigationPage.cs" />
     <Compile Include="Views\BaseView.cs" />
+    <Compile Include="Views\WebsiteView.cs" />
+    <Compile Include="Views\InstagramPage.xaml.cs">
+      <DependentUpon>InstagramPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\TwitterViewModel.cs" />
+    <Compile Include="Models\Tweet.cs" />
+    <Compile Include="Helpers\ITweetStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -61,6 +68,12 @@
     <Reference Include="ImageCircle.Forms.Plugin.Abstractions">
       <HintPath>..\packages\Xam.Plugins.Forms.ImageCircle.1.4.1\lib\portable-net45+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\ImageCircle.Forms.Plugin.Abstractions.dll</HintPath>
     </Reference>
+    <Reference Include="LinqToTwitter.xamarin">
+      <HintPath>..\packages\linqtotwitter.4.1.0\lib\portable-win8+net45+wp8\LinqToTwitter.xamarin.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -70,6 +83,7 @@
     <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Controls\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\MenuPage.xaml">
@@ -79,6 +93,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\TwitterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\InstagramPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
